--- a/style.css
+++ b/style.css
@@ -3,3 +3,5 @@ table { border-collapse: collapse; border: solid thick; }
 /*colgroup, tbody { border: solid medium; }*/
 
 td, th { border: solid thin; height: 1.4em; width: 1.4em; text-align: center; padding:0; }
+
+td:first-child {color: #FF0000; font: italic;}
