--- a/style.css
+++ b/style.css
@@ -12,6 +12,11 @@ th:first-child {font-style: italic; font-weight: normal;}
 
 /*tfoot {font-face: normal;}*/
 tbody td:nth-of-type(1) {color: red; border-color: black;}
+tbody td:nth-of-type(3) {color: #0000FF; border-color: black;}
+tbody tr:nth-of-type(odd) {background-color: lightgreen}
+tbody tr:nth-of-type(even) {background-color: lightblue}
+
+
 
 
 
