forms complete, radio buttons must share same name to be grouped

--- a/style.css
+++ b/style.css
@@ -18,5 +18,5 @@ div.outer-content {background-color: pink; width: 75%; margin-top:20px; }
 
 div.inner-content {background-color: blue; text-align: center; width: 75%; margin: auto}
 
-
+img {width: 100px; height: 125px}
 
