--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-table { border-collapse: collapse; border: solid thick; white-space: nowrap;   margin: 5; }
+table { border-collapse: collapse; border: solid thick; white-space: nowrap;   margin: 5px; }
 
 td, th { border: solid thin; height: 1.4em; width: 1.4em; padding:7px;}
 
@@ -18,5 +18,5 @@ div.outer-content {background-color: pink; width: 75%; margin-top:20px; }
 
 div.inner-content {background-color: blue; text-align: center; width: 75%; margin: auto}
 
-img {width: 100px; height: 125px}
+img {width: 100px; height: 125px; float: left;}
 
